# gestorencontros

./: README.md  app.py  docker-compose.yml  encontros.py  pyproject.toml
server/: .env  Dockerfile  conftest.py  encontros.py  pyproject.toml
server/app/: __init__.py  config.py  extensoes.py
server/app/model/: __init__.py
server/app/modulos/autenticacao/: dao.py  routes.py  service.py
server/app/modulos/casal/: handler.py  routes.py  service.py
server/app/modulos/encontro/: routes.py  service.py
server/app/modulos/equipe/: dao.py  service.py
server/app/modulos/foto/: routes.py
server/app/modulos/movimento/: dao.py  routes.py
server/app/modulos/movimento/encontro/: routes.py
server/app/modulos/movimento/equipe/: dao.py  routes.py
server/app/modulos/paroquia/: routes.py
server/app/modulos/usuario/: routes.py
server/app/static/js/: index.js  util.js
server/app/templates/: index.html  login.html  login2.html
server/app/templates/casal/: detalhes_casal.html  index.html  register.html
server/app/templates/components/: footer.html  navbar.html  sidebar.html  toasts.html
server/app/templates/macros/: pagination.html
server/app/templates/movimento/: circulo_montagem.html  equipe_encontro.html  equipe_montagem.html  index.html  register.html
server/app/templates/movimento/encontro/: index.html  (+1 more)
server/app/templates/usuario/: index.html
server/app/util/: file_handler.py  filters.py  security.py
server/migrations/versions/: 08ea9bdf0526_nova_atualização.py  760f1a0f4319_inclusão_do_campo_observações.py
server/tests/: test_login.py
(+112 files in other folders)
