[tool.poetry]
name = "ednaldo"
version = "0.1.0"
description = ""
authors = ["Ednaldo"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
flask-wtf = "^1.1.1"
flask-login = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
